--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body{
 h1{
     font-size: 50px;
 }
+h2{font-size: 40px;}
 .org{
     color: red;
 }
-section{
+.flex-con{
     display: flex;
     margin: 100px;
 }
@@ -37,3 +38,28 @@ section{
     background-repeat: no-repeat;
     background-position: right;
 }
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 55;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+}
+#web-dev-exprience{
+    border-left: 7px solid;
+    border-image:linear-gradient(blue,cyan);
+    border-image-slice:1;
+}
+#full-stack-exp{
+    border-left: 7px solid;
+    border-image:linear-gradient(salmon,tomato);
+    border-image-slice:1;
+
+}
+footer{text-align: center;}
